--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "resume",
+  "name": "remote",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.1.3",
+    "@material-ui/icons": "^4.2.1",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.1",
